force-app/main/default/objects/Rack_Level__c/Rack_Level__c.object-meta.xml
<CustomObject>
    <label>Rack Level</label>
    <nameField>
        <label>Rack Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rack Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>