force-app/main/default/objects/Rack_Level__c/fields/Bin_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Bin_Capacity__c</fullName>
    <label>Bin Capacity</label>
    <summaryForeignKey>Bin_Location__c.Rack_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>