force-app/main/default/objects/Rack_Level__c/fields/Cubic_Volume_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Volume_Utilization__c</fullName>
    <inlineHelpText>Expressed in Cubic Inches</inlineHelpText>
    <label>Cubic Volume Utilization</label>
    <summarizedField>Bin_Location__c.Cubic_Volume_Utilization__c</summarizedField>
    <summaryForeignKey>Bin_Location__c.Rack_Level__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>