force-app/main/default/objects/Rack_Level__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <formula>Rack__r.Inventory_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Location</label>
    <type>Text</type>
</CustomField>