force-app/main/default/objects/Rack_Level__c/fields/Level_Volume_Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Level_Volume_Cubic_Feet__c</fullName>
    <formula>Rack_Level_Volume__c / 1728</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Volume Cubic Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>