force-app/main/default/objects/Rack_Level__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <label>Rack</label>
    <referenceTo>Rack__c</referenceTo>
    <relationshipLabel>Rack Levels</relationshipLabel>
    <relationshipName>Rack_Levels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>