force-app/main/default/objects/Rack_Level__c/fields/Rack_Level_Volume__c.field-meta.xml
<CustomField>
    <fullName>Rack_Level_Volume__c</fullName>
    <inlineHelpText>Expressed in Cubic Inches</inlineHelpText>
    <label>Rack Level Volume</label>
    <summarizedField>Bin_Location__c.Bin_Volume_Capacity__c</summarizedField>
    <summaryForeignKey>Bin_Location__c.Rack_Level__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>