force-app/main/default/objects/Rack_Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Bin_Capacity__c</columns>
    <columns>Rack__c</columns>
    <columns>Rack_Level_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>